--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				<div class="text text-right"><h5>Correct answers</h5></div>
 			</div>
 			<div class="col-md-4">
-				<div class="text h3 text-center">Question</div>
-				<div class="text h4 text-center">Category</div>
-				<div class="well">Lorem ipsum</div>
+				<div class="text h3 text-center" id="id">Question</div>
+				<div class="text h4 text-center" id="category">Category</div>
+				<div class="well" id="question">Lorem ipsum</div>
 				
-				<div class="btn btn-primary btn-block">Skip</div>
+				<div class="btn btn-primary btn-block" onclick="req()">Skip</div>
 
 				<div class="text-center"> <h4 class="text-danger"><span class="glyphicon glyphicon-ok-circle"></span>INCORRECT</h4></div>
 				<div class="text-center"> <h4 class="text-success"><span class="glyphicon glyphicon-remove-circle"></span>CORRECT</h4></div>
@@ -38,5 +38,6 @@
 		</div>
 	</div>
 	<!-- </div> -->
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
