implement demonstration of letter boxes

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 				<div class="text-center"> <h4 class="text-danger"><span class="glyphicon glyphicon-ok-circle"></span>INCORRECT</h4></div>
 				<div class="text-center"> <h4 class="text-success"><span class="glyphicon glyphicon-remove-circle"></span>CORRECT</h4></div>
 				<div class="well">test</div>
-				<div class="letter-cube"></div>
-				<div class="letter-cube"></div>
-				<div class="letter-cube"></div>
+				<div id="letter-soup"></div>
 			</div>
 			<div class="col-md-4">
 				<div  class="text text-left">Total questions</div>
