implement drag-n-drop

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 				<div class="text-center"> <h4 class="text-danger"><span class="glyphicon glyphicon-ok-circle"></span>INCORRECT</h4></div>
 				<div class="text-center"> <h4 class="text-success"><span class="glyphicon glyphicon-remove-circle"></span>CORRECT</h4></div>
-				<div class="well">test</div>
-				<div id="letter-soup"></div>
+				<div class="panel panel-default" id="answer-container" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+				<div id="letter-container"></div>
 			</div>
 			<div class="col-md-4">
 				<div  class="text text-left">Total questions</div>
