--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body ng-app="App">
-<!-- <div class="container"> -->
 	<nav class="navbar navbar-dark bg-primary">
-	<div class="container">
-
-		<div class="text"><h3>QUIZ GAME</h3></div>
+		<div class="container">
+			<div class="text"><h3>QUIZ GAME</h3></div>
 		</div>
 	</nav>
 	<div class="container">
@@ -22,20 +20,18 @@
 				<div class="text h3 text-center" id="id">Question</div>
 				<div class="text h4 text-center" id="category">Category</div>
 				<div class="well" id="question">Lorem ipsum</div>
-				
 				<div class="btn btn-primary btn-block" onclick="req()">Skip</div>
-
 				<div class="text-center"> <h4 class="text-danger"><span class="glyphicon glyphicon-ok-circle"></span>INCORRECT</h4></div>
 				<div class="text-center"> <h4 class="text-success"><span class="glyphicon glyphicon-remove-circle"></span>CORRECT</h4></div>
 				<div class="panel panel-default" id="answer-container" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 				<div id="letter-container"></div>
+				<div class="btn btn-success btn-block" onclick="req()">Next</div>
 			</div>
 			<div class="col-md-4">
 				<div  class="text text-left">Total questions</div>
 			</div>
 		</div>
 	</div>
-	<!-- </div> -->
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
