implement question counter and score counter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
-				<div class="text text-right"><h5>Correct answers</h5></div>
+				<div class="text text-right" id="score"><h5>Correct answers</h5></div>
 			</div>
 			<div class="col-md-6">
 				<div class="text h3 text-center" id="id">Question</div>
@@ -28,7 +28,7 @@
 				<div class="btn btn-success btn-block  hidden" id="get-next-question" onclick="req()">Next</div>
 			</div>
 			<div class="col-md-3">
-				<div  class="text text-left">Total questions</div>
+				<div  class="text text-left" id="progress">Total questions</div>
 			</div>
 		</div>
 	</div>
