add letter-box css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="btn btn-primary btn-block" onclick="req()">Skip</div>
 				<div class="panel"><div class="text-center" ge"> <h4 class="text-danger hidden" id="incorrect-message"><span class="glyphicon glyphicon-remove-circle"></span>INCORRECT</h4></div></div>
 				<div class="panel"><div class="text-center" > <h4 class="text-success hidden" id="correct-message"><span class="glyphicon glyphicon-ok-circle"></span>CORRECT</h4></div></div>
-				<div class="panel panel-default" id="answer-container" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+				<div class="panel panel-default" id="answer-container"></div>
 				<div id="letter-container" ondrop="dropBack(event)" ondragover="allowDrop(event)"></div>
 				<div class="btn btn-success btn-block  hidden" id="get-next-question" onclick="req()">Next</div>
 			</div>
