refactor req() function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h4 class="text-success hidden" id="correct-message"><span class="glyphicon glyphicon-ok-circle"></span>CORRECT</h4>
 				</div>
 				<div class="panel panel-default" id="answer-container"></div>
-				<div class="panel panel-default" id="letter-container" ondrop="dropBack(event)" ondragover="allowDrop(event)"></div>
+				<div class="panel panel-default" id="letter-container" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 				<div class="btn btn-success btn-block  hidden" id="get-next-question" onclick="req()">Next</div>
 			</div>
 			<div class="col-md-2">
