--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-2">
+			<div class="col-md-3 col-sm-2">
 				<div class="text text-right" id="score"><h5>Correct answers</h5></div>
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-6 col-sm-8">
 				<div class="text h3 text-center" id="id">Question</div>
 				<div class="text h4 text-center" id="category">Category</div>
 				<div class="well" id="question">Lorem ipsum</div>
@@ -31,7 +31,7 @@
 					<div class="panel panel-default" id="letter-container"></div>
 					<div class="btn btn-success btn-block  hidden" id="get-next-question">Next</div>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-3 col-sm-2">
 					<div  class="text text-left" id="progress">Total questions</div>
 				</div>
 			</div>
